--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "@types/node": "^16.3.0",
     "html-escape": "^2.0.0",
     "typescript": "^4.3.5"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
