--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "envalid": "^7.1.1",
     "gram-tgcalls": "^1.3.5",
     "grammy": "^1.2.0",
+    "html-escaper": "^3.0.3",
     "node-pre-gyp": "^0.17.0",
     "telegram": "^1.7.15",
     "tgcalls": "^0.1.4"
   },
   "devDependencies": {
+    "@types/html-escaper": "^3.0.0",
     "@types/node": "^16.3.0",
-    "html-escape": "^2.0.0",
     "typescript": "^4.3.5"
   },
   "engines": {
