--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "html-escaper": "^3.0.3",
     "node-pre-gyp": "^0.17.0",
     "telegram": "^1.7.23",
-    "tgcalls": "^0.1.4"
+    "tgcalls": "^0.1.4",
+    "ytdl-core-telegram": "github:rojserbest/ytdl-core-telegram"
   },
   "devDependencies": {
     "@types/html-escaper": "^3.0.0",
