--- a/package.json
+++ b/package.json
@@ -11,19 +11,20 @@
   },
   "author": "Roj Serbest <rojserbest@icloud.com>",
   "dependencies": {
-    "@grammyjs/types": "^2.2.2",
+    "@grammyjs/types": "^2.2.3",
     "dotenv": "^8.2.0",
     "envalid": "^7.1.1",
+    "fluent-ffmpeg": "^2.1.2",
+    "got": "^11.8.2",
     "gram-tgcalls": "^1.3.7",
     "grammy": "^1.2.0",
-    "html-escaper": "^3.0.3",
     "node-pre-gyp": "^0.17.0",
     "telegram": "^1.7.23",
     "tgcalls": "^0.1.4",
-    "ytdl-core-telegram": "github:rojserbest/ytdl-core-telegram"
+    "ytdl-core-telegram": "^2.0.2"
   },
   "devDependencies": {
-    "@types/html-escaper": "^3.0.0",
+    "@types/fluent-ffmpeg": "^2.1.18",
     "@types/node": "^16.3.0",
     "typescript": "^4.3.5"
   },
