--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,1 @@
-custom: ["https://rojserbest.github.io/bitcoin/?address=bc1q3kxdmzuqecwusaq8tlrfgdhx790yd5tmenwwmd"]
+custom: ["https://www.blockchain.com/btc/address/bc1q3kxdmzuqecwusaq8tlrfgdhx790yd5tmenwwmd"]
