--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "author": "Roj Serbest <rojserbest@icloud.com>",
   "dependencies": {
     "@grammyjs/types": "^2.2.3",
+    "@types/i18n": "^0.13.1",
     "dotenv": "^8.2.0",
     "envalid": "^7.1.1",
     "fluent-ffmpeg": "^2.1.2",
     "got": "^11.8.2",
     "gram-tgcalls": "^1.3.7",
     "grammy": "^1.2.0",
+    "i18n": "^0.13.3",
     "node-pre-gyp": "^0.17.0",
     "telegram": "^1.7.23",
     "tgcalls": "^0.1.4",
