--- a/package.json
+++ b/package.json
@@ -1,39 +1,41 @@
 {
-  "name": "callsmusicremix",
-  "version": "1.0.0",
-  "description": "A Telegram bot to stream audio in calls using GramTGCalls",
-  "main": "dist",
-  "scripts": {
-    "start": "node dist",
-    "build": "tsc",
-    "prepare": "npm run build",
-    "test": "tsc --noEmit"
-  },
-  "author": "Roj Serbest <rojserbest@icloud.com>",
-  "dependencies": {
-    "@grammyjs/types": "^2.2.3",
-    "@types/html-escaper": "^3.0.0",
-    "@types/i18n": "^0.13.1",
-    "dotenv": "^8.2.0",
-    "envalid": "^7.1.1",
-    "fluent-ffmpeg": "^2.1.2",
-    "got": "^11.8.2",
-    "gram-tgcalls": "^1.3.7",
-    "grammy": "^1.2.0",
-    "html-escaper": "^3.0.3",
-    "i18n": "^0.13.3",
-    "node-pre-gyp": "^0.17.0",
-    "telegram": "^1.7.23",
-    "tgcalls": "^0.1.4",
-    "ytdl-core-telegram": "^2.0.2",
-    "ytpl": "^2.2.1"
-  },
-  "devDependencies": {
-    "@types/fluent-ffmpeg": "^2.1.18",
-    "@types/node": "^16.3.0",
-    "typescript": "^4.3.5"
-  },
-  "engines": {
-    "node": "16.x"
-  }
+    "name": "callsmusicremix",
+    "version": "1.0.0",
+    "description": "A Telegram bot to stream audio in calls using GramTGCalls",
+    "main": "dist",
+    "scripts": {
+        "start": "node dist",
+        "build": "tsc",
+        "prepare": "npm run build",
+        "test": "tsc --noEmit",
+        "prettier": "prettier run --write **"
+    },
+    "author": "Roj Serbest <rojserbest@icloud.com>",
+    "dependencies": {
+        "@grammyjs/types": "^2.2.3",
+        "@types/html-escaper": "^3.0.0",
+        "@types/i18n": "^0.13.1",
+        "dotenv": "^8.2.0",
+        "envalid": "^7.1.1",
+        "fluent-ffmpeg": "^2.1.2",
+        "got": "^11.8.2",
+        "gram-tgcalls": "^1.3.7",
+        "grammy": "^1.2.0",
+        "html-escaper": "^3.0.3",
+        "i18n": "^0.13.3",
+        "node-pre-gyp": "^0.17.0",
+        "telegram": "^1.7.23",
+        "tgcalls": "^0.1.4",
+        "ytdl-core-telegram": "^2.0.2",
+        "ytpl": "^2.2.1"
+    },
+    "devDependencies": {
+        "@types/fluent-ffmpeg": "^2.1.18",
+        "@types/node": "^16.3.0",
+        "prettier": "^2.3.2",
+        "typescript": "^4.3.5"
+    },
+    "engines": {
+        "node": "16.x"
+    }
 }
