--- a/package.json
+++ b/package.json
@@ -19,15 +19,16 @@
         "envalid": "^7.1.1",
         "fluent-ffmpeg": "^2.1.2",
         "got": "^11.8.2",
-        "gram-tgcalls": "^1.3.7",
+        "gram-tgcalls": "^1.3.9",
         "grammy": "^1.2.0",
         "html-escaper": "^3.0.3",
         "i18n": "^0.13.3",
         "node-pre-gyp": "^0.17.0",
-        "telegram": "^1.7.23",
+        "telegram": "^1.8.3",
         "tgcalls": "^0.1.4",
+        "ytdl-core": "^4.9.1",
         "ytdl-core-telegram": "^2.0.6",
-        "ytpl": "^2.2.1"
+        "ytpl": "^2.2.3"
     },
     "devDependencies": {
         "@types/fluent-ffmpeg": "^2.1.18",
