--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
     "name": "Calls Music Remix",
-    "description": "Stream in Telegram calls using GramTGCalls.",
+    "description": "An operational and exprimental Telegram music bot.",
     "keywords": ["telegram", "music", "gram-tgcalls", "tgcallsjs", "gramjs"],
-    "repository": "https://github.com/callsmusic/CallsMusicRemix",
+    "repository": "https://gitlab.com/callsmusic/remix",
     "env": {
         "BOT_TOKEN": {
             "description": "Bot token from @BotFather.",
