--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "test": "tsc --noEmit",
         "prettier": "prettier run --write **"
     },
-    "author": "Roj Serbest <rojserbest@icloud.com>",
+    "author": "Roj Serbest <roj@rojser.best>",
     "dependencies": {
         "@grammyjs/ratelimiter": "^1.1.4",
         "@types/i18n": "^0.13.1",
