--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "envalid": "^7.2.1",
         "fluent-ffmpeg": "^2.1.2",
         "got": "^11.8.2",
-        "gram-tgcalls": "^2.1.6",
+        "gram-tgcalls": "^2.1.8",
         "grammy": "^1.3.3",
         "i18n": "^0.13.3",
         "telegram": "^1.8.13",
@@ -33,6 +33,6 @@
         "typescript": "^4.4.3"
     },
     "engines": {
-        "node": "16.6.2"
+        "node": "16.x"
     }
 }
