--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Install modules
-      run: yarn
+      run: npm install
     
     - name: Run ESLint
       run: eslint src/**ts
