--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,14 @@
 node_modules
 .github
 dist
+.dockerignore
+.eslintrc.yml
+.gitignore
+.prettierrc
+CODE_OF_CONDUCT.md
+CONTRIBUTING.md
+Dockerfile
+example.env
+LICENSE
+package-lock.json
+README.md
