--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@grammyjs/types": "^2.2.6",
+    "@mapbox/node-pre-gyp": "^1.0.7",
     "@types/fluent-ffmpeg": "^2.1.18",
     "@types/i18n": "^0.13.1",
     "@types/node": "^16.9.1",
