--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "grammy": "^1.4.3",
     "i18n": "^0.13.3",
     "telegram": "^2.1.0",
-    "ytdl-core": "^4.9.1",
     "ytpl": "^2.2.3",
     "ytsr": "^3.5.3"
   },
@@ -38,7 +37,8 @@
     "eslint-plugin-promise": "^5.2.0",
     "prettier": "^2.5.0",
     "tgcalls-next": "^0.0.0-rc.1",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "ytdl-core": "^4.9.2"
   },
   "engines": {
     "node": "16.x"
