--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "i18n": "^0.13.3",
     "telegram": "^2.1.0",
     "ytpl": "^2.2.3",
-    "ytsr": "^3.5.3"
+    "ytsr": "^3.5.3",
+    "tgcalls-next": "^0.0.0-rc.2",
+    "ytdl-core": "^4.9.2"
   },
   "devDependencies": {
     "@grammyjs/types": "^2.3.1",
@@ -29,9 +31,7 @@
     "@types/i18n": "^0.13.1",
     "@types/node": "^16.11.11",
     "prettier": "^2.5.0",
-    "tgcalls-next": "^0.0.0-rc.2",
-    "typescript": "^4.5.2",
-    "ytdl-core": "^4.9.2"
+    "typescript": "^4.5.2"
   },
   "engines": {
     "node": "16.x"
