Update Prettier config

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
-  "tabWidth": 2,
-  "arrowParens": "avoid",
-  "singleQuote": true,
   "semi": false,
-  "trailingComma": "none"
+  "tabWidth": 2,
+  "singleQuote": true,
+  "arrowParens": "avoid",
+  "trailingComma": "es5"
 }
