--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "got": "^11.8.3",
     "grammy": "^1.4.3",
     "i18n": "^0.13.3",
+    "lyrics-searcher": "^1.0.58",
     "telegram": "^2.1.0",
-    "ytpl": "^2.2.3",
-    "ytsr": "^3.5.3",
     "tgcalls-next": "^0.0.0-rc.2",
-    "ytdl-core": "^4.9.2"
+    "ytdl-core": "^4.9.2",
+    "ytpl": "^2.2.3",
+    "ytsr": "^3.5.3"
   },
   "devDependencies": {
     "@grammyjs/types": "^2.3.1",
