--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@moebius/grammy-fluent": "^0.4.0",
     "dotenv": "^14.2.0",
     "envalid": "^7.2.2",
+    "escape-html": "^1.0.3",
     "fluent-ffmpeg": "^2.1.2",
     "got": "^11.8.3",
     "grammy": "^1.6.2",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@grammyjs/types": "^2.5.1",
+    "@types/escape-html": "^1.0.1",
     "@types/fluent-ffmpeg": "^2.1.20",
     "@types/node": "^17.0.10",
     "prettier": "^2.5.1",
