--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "prettier": "prettier run --write **"
   },
   "dependencies": {
+    "@moebius/fluent": "^0.3.0",
+    "@moebius/grammy-fluent": "^0.4.0",
     "dotenv": "^14.2.0",
     "envalid": "^7.2.2",
+    "escape-html": "^1.0.3",
     "fluent-ffmpeg": "^2.1.2",
     "got": "^11.8.3",
     "grammy": "^1.6.2",
-    "i18n": "^0.13.4",
     "lyrics-searcher": "^1.0.58",
     "telegram": "^2.4.3",
     "tgcalls-next": "^0.0.0-rc.18",
@@ -29,8 +31,8 @@
   },
   "devDependencies": {
     "@grammyjs/types": "^2.5.1",
+    "@types/escape-html": "^1.0.1",
     "@types/fluent-ffmpeg": "^2.1.20",
-    "@types/i18n": "^0.13.2",
     "@types/node": "^17.0.10",
     "prettier": "^2.5.1",
     "typescript": "^4.5.5"
