Convert to module

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "author": "Roj <ez@roj.im>",
   "license": "AGPL-3.0",
   "private": true,
+  "type": "module",
   "main": "dist/index.js",
   "engines": {
     "node": ">17.x"
